# ms-manager

./: .gitattributes  .gitignore  README.md  dev-artifacts.example.json  package-lock.json  package.json  vite.config.js
.github/: release-tooling.json
.github/workflows/: candidate.yml  ci.yml  release.yml
crates/ms-manager-core/: Cargo.toml
crates/ms-manager-core/examples/: distribution_manifest_contract_probe.rs  step_preset_core_contract_probe.rs
crates/ms-manager-core/src/: bridge_instances.rs  channel.rs  controller_state.rs  core_file_tool.rs  crypto.rs  dist.rs  error.rs  github.rs  install_state.rs  lib.rs  manifest.rs  platform.rs  project_migration.rs  settings.rs  step_preset.rs
scripts/: tauri.mjs  tauri_versioning.mjs
scripts/ci/: generate_candidate_artifacts_json.mjs  install_frontend_deps.mjs  validate_app_versions.mjs  validate_frontend_lockfile.mjs
scripts/test/: tauri_versioning.test.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_error.rs  layout.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
src-tauri/src/commands/: app_update.rs  autostart.rs  bridge.rs  bridge_instances.rs  controller_fs.rs  device.rs  distribution.rs  flash.rs  install.rs  local_fs.rs  midi.rs  mod.rs  payload.rs  project_migration.rs  settings.rs  status.rs  step_preset.rs  ux_recorder.rs
src-tauri/src/services/: artifact_paths.rs  artifact_resolver.rs  assets.rs  bridge.rs  bridge_ctl.rs  bridge_instances.rs  bridge_logs.rs  device.rs  (+16 more)
src/routes/: +layout.svelte  +page.svelte
(+50 files in other folders)
