[package]
name = "ms-manager-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
